# trill-matchmaking-server

./: .env.example  BUILDING.md  Cargo.toml  Dockerfile  INDEX.md  PORTING_SUMMARY.md  QUICKSTART.md  README.md  Virtual Gamepad GBA.icp  test_matchmaking.py  turnserver.conf.example
.github/workflows/: build-and-release.yml
proto/: signaling.proto
src/: config.rs  hub.rs  ice.rs  main.rs  messages.rs  models.rs  pb.rs
src/handlers/: messages.rs  websocket.rs
