[package]
name = "trill-signaling-server"
version = "5.0.3"
edition = "2021"
authors = ["Hikari Calyx Tech"]
description = "Rust implementation of the Trill signaling server for WebRTC"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
uuid = { version = "1.10", features = ["v4"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
dashmap = "6.0"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "trill-signaling-server"
path = "src/main.rs"
